--- a/requirements.txt
+++ b/requirements.txt
@@ -24,9 +24,11 @@ h11==0.16.0
 hf-xet==1.1.3
 huggingface-hub==0.32.4
 idna==3.10
+ipykernel==6.29.5
 ipywidgets==8.1.7
 Jinja2==3.1.6
 joblib==1.5.1
+jupyterlab_widgets==3.0.15
 kiwisolver==1.4.8
 langdetect==1.0.9
 Markdown==3.7
@@ -38,18 +40,18 @@ multiprocess==0.70.16
 networkx==3.5
 nltk==3.8.1
 numpy==1.25.2
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.19.3
-nvidia-nvjitlink-cu12==12.9.86
-nvidia-nvtx-cu12==12.1.105
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 pandarallel==1.6.5
 pandas==2.2.3
 peft==0.15.2
@@ -72,20 +74,21 @@ seaborn==0.13.2
 sniffio==1.3.1
 soupsieve==2.7
 starlette==0.36.3
-sympy==1.14.0
+sympy==1.13.1
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 threadpoolctl==3.6.0
 tokenizers==0.21.2
-torch==2.2.1
+torch==2.5.1
 tqdm==4.67.1
 transformers==4.52.4
-triton==2.2.0
+triton==3.1.0
 typing-inspection==0.4.1
 tzdata==2025.2
 urllib3==2.4.0
 uvicorn==0.27.1
 Werkzeug==3.1.3
 widgetsnbextension==4.0.14
+wordcloud==1.9.4
 xxhash==3.5.0
 yarl==1.20.1
